<resources>
    <string name="app_name">SimpleCleanArchitecture</string>
    <string name="nickname_validation_message">Nickname is too long</string>
    <string name="email_validation_message">Email is incorrect</string>
    <string name="description_validation_message">Description is incorrect</string>
    <string name="password_validation_message">Password is incorrect</string>
    <string name="password_confirmation_validation_message">Passwords are not equal</string>
    <string name="common_communication_error">Error during processing your request.</string>
    <string name="user_delete_confirmation_message">Are you sure you want to delete this user?</string>
    <string name="user_delete_success_message">User deleted.</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="user_add_button">Add user</string>
    <string name="user_edit_button">Edit</string>
    <string name="user_delete_button">Delete</string>
    <string name="user_set_password_button">Change password</string>
    <string name="user_edit_header">Edit user</string>
    <string name="user_avatar_description">Avatar</string>
    <string name="user_idscan_description">ID scan</string>
    <string name="user_edit_save_button">Save</string>
    <string name="user_edit_cancel_button">Cancel</string>
    <string name="user_add_header">Add user</string>
    <string name="user_nickname_hint">Nickname</string>
    <string name="user_email_hint">Email</string>
    <string name="user_password_hint">Password</string>
    <string name="user_description_hint">Description</string>
    <string name="user_password_confirmation_hint">Confirm password</string>
    <string name="image_chooser_title">Select image to load</string>
</resources>